relato + relato arquivo inclusao

--- a/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
@@ -129,7 +129,11 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-envelope"></i>
                                 </span>
-                                <input type="text" name="EmailRelator" class="form-control" placeholder="eg.: E-mail do relator" maxlength="100" />
+                                <input type="text" name="EmailRelator" class="form-control" 
+                                       placeholder="eg.: E-mail do relator" 
+                                       maxlength="100"
+                                       title="Por favor informe um endereço eletrônico válido do usuário"
+                                       />
                             </div>
                         </div>
                         <label class="col-lg-1 control-label text-lg-right pt-2">Telefone (telephone)</label>
