--- a/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
@@ -27,7 +27,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input readonly type="text" name="email" class="form-control" value="02081984" maxlength="100" />
+                                <input readonly type="text" name="email" class="form-control" value="@Model.Relato.CodRelato" maxlength="100" />
                             </div>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-lg-3 control-label text-lg-right pt-2">Data da ocorrência <span class="required">*</span></label>
+                        <label class="col-lg-3 control-label text-lg-right pt-2">@Model.Relato.DatOcorrencia<span class="required">*</span></label>
                         <div class="col-lg-3">
                             <div class="input-group">
                                 <span class="input-group-addon">
@@ -57,32 +57,43 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-clock-o"></i>
                                 </span>
-                                <input readonly type="text" data-plugin-timepicker class="form-control" data-plugin-options='{ "showMeridian": false }' placeholder="eg.: Horário da ocorrência">
+                                <input readonly type="text" data-plugin-timepicker class="form-control" 
+                                       data-plugin-options='{ "showMeridian": false }' placeholder="eg.: Horário da ocorrência"
+                                       value="@Model.Relato.HorOcorrencia">
+                                       
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local da Ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input readonly type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Nome do Local da Ocorrência do relato  " required maxlength="200"/>
+                            <input readonly type="text" rows="3" 
+                                   name="fullname" class="form-control" 
+                                   placeholder="eg.: Nome do Local da Ocorrência do relato  " 
+                                   required maxlength="200"
+                                   value="@Model.Relato.DscLocalOcorrenciaRelator"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Envolvidos na ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea readonly type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Pessoas e / ou veículos envolvidos no relato" required maxlength="500"></textarea>
+                            <textarea readonly type="text" rows="3" name="fullname"
+                                      class="form-control" placeholder="eg.: Pessoas e / ou veículos envolvidos no relato"
+                                      required maxlength="500">@Model.Relato.DscEnvolvidosOcorrencia</textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição da ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea readonly type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição da ocorrência do relato" required maxlength="200"></textarea>
+                            <textarea readonly type="text" rows="3" name="fullname"
+                                      class="form-control" placeholder="eg.: Descrição da ocorrência do relato"
+                                      required maxlength="200">@Model.Relato.DscOcorrenciaRelator</textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Motivo do Cancelamento <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do motivo " required maxlength="500"></textarea>
+                            <textarea type="text" rows="3" name="DscMotivoCancelamento" class="form-control" placeholder="eg.: Descrição do motivo " required maxlength="500"></textarea>
                         </div>
                     </div>
                 </div>
