--- a/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
@@ -31,31 +31,31 @@
                     <div class="form-group row">
                         <label class="col-lg-3 control-label text-lg-right pt-2">Parecer Técnico</label>
                         <div class="col-lg-3">
-                            <input type="text" name="fullname" class="form-control" placeholder="eg.: Tempo que o técnico deve ter para responder um parecer técnico" maxlength="100" />
+                            <input type="text" id="ParecerTecnico" name="ParecerTecnico" class="form-control" placeholder="eg.: Tempo que o técnico deve ter para responder um parecer técnico" maxlength="3" />
                         </div>
 
                         <label class="col-lg-2 control-label text-lg-right pt-2">Devolvido para Complemento<span class="required">*</span></label>
                         <div class="col-lg-3 pull-left">
-                            <input type="text" name="fullname" class="form-control" placeholder="eg.: Tempo de resposta do parecer técnico quando o mesmo é rejeitado e devolvido para complemento" maxlength="100" />
+                            <input type="text" id="DevolvidoParaComplemento" name="DevolvidoParaComplemento" class="form-control" placeholder="eg.: Tempo de resposta do parecer técnico quando o mesmo é rejeitado e devolvido para complemento" maxlength="3" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-lg-3 control-label text-lg-right pt-2">Tempo de Notificação (e-mail) para Responder Parecer Técnico<span class="required">*</span></label>
                         <div class="col-lg-3">
-                            <input type="text" name="fullname" class="form-control" placeholder="eg.: Tempo em que dever ser notificado por e-mail as Respostas dos Pareceres Técnicos " maxlength="100" />
+                            <input type="text" id="TempoNotificacaoParaResponder" name="TempoNotificacaoParaResponder" class="form-control" placeholder="eg.: Tempo em que dever ser notificado por e-mail as Respostas dos Pareceres Técnicos " maxlength="3" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Texto Descritivo para Motivo de Cancelamento <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Texto descritivo a ser inserido no e-mail de notificação em caso de cancelamento do relato" required maxlength="1000"></textarea>
+                            <textarea type="text" rows="3" id="TextoMotivoCancelamento" name="TextoMotivoCancelamento" class="form-control" placeholder="eg.: Texto descritivo a ser inserido no e-mail de notificação em caso de cancelamento do relato" required maxlength="1000"></textarea>
                         </div>
                     </div>
                 </div>
                 <footer class="card-footer">
                     <div class="row justify-content-end">
                         <div class="col-sm-9">
-                            <button class="btn  btn-success pull-left mr-2">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
+                            <button data-toggle="tooltip" data-placement="bottom" title="Armazena os dados da configuração no sistema RealPrev" class="btn  btn-success pull-left mr-2">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
                             <button type="reset" class="btn btn-danger pull-left mr-2">Cancelar &nbsp;&nbsp;<i class="fa fa-remove"></i></button>
 
                         </div>
@@ -66,36 +66,53 @@
     </div>
 </div>
 @section CssSpecificVendor {
-    <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
-    <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
+    <style>
+        .popover {
+            min-width: 35em !important;
+        }
+    </style>
 }
 @section Scripts {
-    <script src="~/vendor/select2/js/select2.js"></script>
-
     <script>
-        // Select2
-        (function($) {
+        (function ($) {
 
             'use strict';
 
-            if ( $.isFunction($.fn[ 'select2' ]) ) {
+            var crub = @ViewBag.CrudMessage;
 
-                $(function() {
-                    $('[data-plugin-selectTwo]').each(function() {
-                        var $this = $( this ),
-                            opts = {};
-
-                        var pluginOptions = $this.data('plugin-options');
-                        if (pluginOptions)
-                            opts = pluginOptions;
-
-                        $this.themePluginSelect2(opts);
-                    });
+            if (crub===1) {
+                new PNotify({
+                    title: 'Configurar Ambiente',
+                    text: 'Cadastro realizado com sucesso!',
+                    type: 'success'
                 });
+            }else if (crub === 2) {
+                new PNotify({
+                    title: 'Configurar Ambiente',
+                    text: 'Dados alterados com sucesso.',
+                    type: 'warning'
+                });
+            }else if (crub === 3) {
+                new PNotify({
+                    title: 'Configurar Ambiente',
+                    text: 'Registro excluído com sucesso.',
+                    type: 'error'
+                });
+            }
+            
+        }).apply(this, [jQuery]);
 
+        // Tooltip
+        (function ($) {
+
+            'use strict';
+
+            if ($.isFunction($.fn['tooltip'])) {
+                $('[data-toggle=tooltip],[rel=tooltip]').tooltip({ container: 'body' });
             }
 
         }).apply(this, [jQuery]);
+
 
     </script>
 }
