Relato Cadastro - OK

--- a/Infraero.Relprev.WebUi/Views/Relato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Index.cshtml
@@ -36,7 +36,7 @@
                             {
                                 <tr>
                                     <td>@Html.DisplayFor(modelItem => item.CodRelato)</td>
-                                    <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.StsRelator)</td>
                                     <td>@Html.DisplayFor(modelItem => item.DatOcorrencia)</td>
                                     <td>@Html.DisplayFor(modelItem => item.HorOcorrencia)</td>
                                     <td class="actions">
