--- a/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
@@ -105,37 +105,26 @@
                     <div class="form-group row">
                         <label class="col-sm-2 control-label text-sm-right pt-2"></label>
                         <div class="col-sm-9">
+                            
                             <table class="table table-responsive-md table-striped mb-0">
                                 <thead>
                                     <tr>
                                         <th colspan="4" class="text-center">Nome dos arquivos anexo</th>
                                     </tr>
+
                                     <tr>
                                         <th>Arquivo</th>
-                                        <th>Responsável</th>
-                                        <th>Fase do anexo</th>
-                                        <th>Data e hora</th>
+                                        
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>atendimento.png</td>
-                                        <td>Uriel</td>
-                                        <td>Parecer técnico</td>
-                                        <td>05/12/2019 10:00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>relato.png</td>
-                                        <td>Miguel</td>
-                                        <td>Parecer técnico</td>
-                                        <td>01/12/2019 18:00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>atendimento.png</td>
-                                        <td>Maria Flor</td>
-                                        <td>Parecer técnico</td>
-                                        <td>05/12/2019 08:00</td>
-                                    </tr>
+                                    @foreach (var item in @Model.ListRelatoArquivo)
+                                    {
+                                        <tr>
+                                            <td>@item.Arquivo</td>
+                                            
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
 
