Cadatro relato com mensagem e permissões

--- a/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
@@ -28,17 +28,18 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input readonly type="email" name="email" value="@Model.Relato.CodRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
+                                <input readonly id="CodRelato" name="CodRelato" value="@Model.Relato.CodRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
+                        <input type="hidden" id="CodUnidadeInfraestrutura" name="CodUnidadeInfraestrutura" value="@Model.Relato.CodUnidadeInfraestrutura">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Unidade de infraestrutura <span class="required">*</span></label>
                         <div class="col-lg-9">
-                            <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
-                                    title="Por favor selecione uma unidade de infraestrutura." required
-                                     asp-items='@Model.ListUnidadeInfraestrutura'>
-                            </select>
+                            <input readonly id="DscUnidadeInfraestrutura" name="DscUnidadeInfraestrutura"
+                                   placeholder="eg.: Unidade Infraestrutura"
+                                   class="form-control"
+                                   value="@Model.NomUnidadeÌnfraestrutura">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -48,7 +49,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </span>
-                                <input readonly id="date"
+                                <input readonly id="DtOcorrencia" name="DtOcorrencia"
                                        data-plugin-masked-input data-input-mask="99/99/9999"
                                        placeholder="eg.: Data da ocorrência de prevenção"
                                        class="form-control"
@@ -63,6 +64,7 @@
                                     <i class="fa fa-clock-o"></i>
                                 </span>
                                 <input readonly type="text"
+                                       id="HorOcorrencia" name="HorOcorrencia"
                                        data-plugin-timepicker class="form-control"
                                        data-plugin-options='{ "showMeridian": false }'
                                        placeholder="eg.: Horário da ocorrência"
@@ -74,7 +76,7 @@
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local da Ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
                             <textarea readonly type="text" rows="3"
-                                      name="fullname"
+                                      name="DscLocalOcorrenciaRelator"
                                       class="form-control"
                                       placeholder="eg.: Nome do Local da Ocorrência do relato  "
                                       required
@@ -85,7 +87,8 @@
                         <label class="col-sm-3 control-label text-sm-right pt-2">Envolvidos na ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
                             <textarea readonly
-                                      type="text" rows="3" name="fullname"
+                                      name="DscEnvolvidosOcorrencia"
+                                      type="text" rows="3" 
                                       class="form-control"
                                       placeholder="eg.: Pessoas e / ou veículos envolvidos no relato"
                                       required
@@ -95,7 +98,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição da ocorrência <span class="required">*</span></label>
                         <div class="col-sm-7">
-                            <textarea readonly type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição da ocorrência do relato"
+                            <textarea readonly type="text" rows="3" name="DscOcorrenciaRelator" class="form-control" placeholder="eg.: Descrição da ocorrência do relato"
                                       required maxlength="1000">@Model.Relato.DscOcorrenciaRelator</textarea>
                         </div>
                         <div class="col-sm-2">
