--- a/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Edit", "Relato", FormMethod.Post))
+        @using (@Html.BeginForm("Cancel", "Relato", FormMethod.Post))
         {
             <section class="card">
                 <header class="card-header">
@@ -27,73 +27,122 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input readonly type="text" name="email" class="form-control" value="@Model.Relato.CodRelato" maxlength="100" />
+                                <input readonly id="CodRelato" name="CodRelato" value="@Model.Relato.CodRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
+                        <input type="hidden" id="CodUnidadeInfraestrutura" name="CodUnidadeInfraestrutura" value="@Model.Relato.CodUnidadeInfraestrutura">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Unidade de infraestrutura <span class="required">*</span></label>
                         <div class="col-lg-9">
-                            <select data-plugin-selectTwo class="form-control populate" disabled="disabled">
-                                <option value="AK">Alaska</option>
-                                <option value="HI">Hawaii</option>
-                            </select>
+                            <input readonly id="DscUnidadeInfraestrutura" name="DscUnidadeInfraestrutura"
+                                   placeholder="eg.: Unidade Infraestrutura"
+                                   class="form-control"
+                                   value="@Model.NomUnidadeÌnfraestrutura">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-lg-3 control-label text-lg-right pt-2">@Model.Relato.DatOcorrencia<span class="required">*</span></label>
+                        <label class="col-lg-3 control-label text-lg-right pt-2">Data da ocorrência</label>
                         <div class="col-lg-3">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </span>
-                                <input readonly id="date" data-plugin-masked-input data-input-mask="99/99/9999" placeholder="eg.: Data da ocorrência de prevenção" class="form-control">
+                                <input readonly id="DtOcorrencia" name="DtOcorrencia"
+                                       data-plugin-masked-input data-input-mask="99/99/9999"
+                                       placeholder="eg.: Data da ocorrência de prevenção"
+                                       class="form-control"
+                                       value="@Model.Relato.DatOcorrencia">
                             </div>
                         </div>
 
-                        <label class="col-lg-2 control-label text-lg-right pt-2">Hora da Ocorrência <span class="required">*</span></label>
+                        <label class="col-lg-2 control-label text-lg-right pt-2">Hora da Ocorrência</label>
                         <div class="col-lg-3 pull-left">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-clock-o"></i>
                                 </span>
-                                <input readonly type="text" data-plugin-timepicker class="form-control" 
-                                       data-plugin-options='{ "showMeridian": false }' placeholder="eg.: Horário da ocorrência"
+                                <input readonly type="text"
+                                       id="HorOcorrencia" name="HorOcorrencia"
+                                       data-plugin-timepicker class="form-control"
+                                       data-plugin-options='{ "showMeridian": false }'
+                                       placeholder="eg.: Horário da ocorrência"
                                        value="@Model.Relato.HorOcorrencia">
-                                       
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local da Ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input readonly type="text" rows="3" 
-                                   name="fullname" class="form-control" 
-                                   placeholder="eg.: Nome do Local da Ocorrência do relato  " 
-                                   required maxlength="200"
-                                   value="@Model.Relato.DscLocalOcorrenciaRelator"/>
+                            <textarea readonly type="text" rows="3"
+                                      name="DscLocalOcorrenciaRelator"
+                                      class="form-control"
+                                      placeholder="eg.: Nome do Local da Ocorrência do relato  "
+                                      required
+                                      maxlength="200">@Model.Relato.DscLocalOcorrenciaRelator</textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Envolvidos na ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea readonly type="text" rows="3" name="fullname"
-                                      class="form-control" placeholder="eg.: Pessoas e / ou veículos envolvidos no relato"
-                                      required maxlength="500">@Model.Relato.DscEnvolvidosOcorrencia</textarea>
+                            <textarea readonly
+                                      name="DscEnvolvidosOcorrencia"
+                                      type="text" rows="3"
+                                      class="form-control"
+                                      placeholder="eg.: Pessoas e / ou veículos envolvidos no relato"
+                                      required
+                                      maxlength="500">@Model.Relato.DscEnvolvidosOcorrencia</textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição da ocorrência <span class="required">*</span></label>
+                        <div class="col-sm-7">
+                            <textarea readonly type="text" rows="3" name="DscOcorrenciaRelator" class="form-control" placeholder="eg.: Descrição da ocorrência do relato"
+                                      required maxlength="1000">@Model.Relato.DscOcorrenciaRelator</textarea>
+                        </div>
+                        <div class="col-sm-2">
+                            <button type="reset" class="btn btn-warning pull-left mr-2">Nova Descrição &nbsp;&nbsp;<i class="fa fa-pencil"></i></button>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 control-label text-sm-right pt-2"></label>
                         <div class="col-sm-9">
-                            <textarea readonly type="text" rows="3" name="fullname"
-                                      class="form-control" placeholder="eg.: Descrição da ocorrência do relato"
-                                      required maxlength="200">@Model.Relato.DscOcorrenciaRelator</textarea>
+
+                            <table class="table table-responsive-md table-striped mb-0">
+                                <thead>
+                                    <tr>
+                                        <th colspan="4" class="text-center">Nome dos arquivos anexo</th>
+                                    </tr>
+
+                                    <tr>
+                                        <th>Arquivo</th>
+
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in @Model.ListRelatoArquivo)
+                                    {
+                                        <tr>
+                                            <td>@item.Arquivo</td>
+
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Motivo do Cancelamento <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="DscMotivoCancelamento" class="form-control" placeholder="eg.: Descrição do motivo " required maxlength="500"></textarea>
+                            <textarea type="text"
+                                      rows="3"
+                                      name="DscMotivoCancelamento"
+                                      class="form-control"
+                                      placeholder="eg.: Descrição do motivo "
+                                      required
+                                      maxlength="500">
+                            </textarea>
                         </div>
                     </div>
                 </div>
