--- a/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
@@ -96,42 +96,43 @@
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição da ocorrência <span class="required">*</span></label>
-                        <div class="col-sm-7">
+                        <div class="col-sm-9">
                             <textarea readonly type="text" rows="3" name="DscOcorrenciaRelator" class="form-control" placeholder="eg.: Descrição da ocorrência do relato"
                                       required maxlength="1000">@Model.Relato.DscOcorrenciaRelator</textarea>
                         </div>
-                        <div class="col-sm-2">
-                            <button type="reset" class="btn btn-warning pull-left mr-2">Nova Descrição &nbsp;&nbsp;<i class="fa fa-pencil"></i></button>
-                        </div>
+                        @*<div class="col-sm-2">
+                                <button type="reset" class="btn btn-warning pull-left mr-2">Nova Descrição &nbsp;&nbsp;<i class="fa fa-pencil"></i></button>
+                            </div>*@
                     </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 control-label text-sm-right pt-2"></label>
-                        <div class="col-sm-9">
+                    @* <div class="form-group row">
+                            <label class="col-sm-2 control-label text-sm-right pt-2"></label>
+                            <div class="col-sm-9">
 
-                            <table class="table table-responsive-md table-striped mb-0">
-                                <thead>
-                                    <tr>
-                                        <th colspan="4" class="text-center">Nome dos arquivos anexo</th>
-                                    </tr>
-
-                                    <tr>
-                                        <th>Arquivo</th>
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in @Model.ListRelatoArquivo)
-                                    {
+                                <table class="table table-responsive-md table-striped mb-0">
+                                    <thead>
                                         <tr>
-                                            <td>@item.Arquivo</td>
+                                            <th colspan="4" class="text-center">Nome dos arquivos anexo</th>
+                                        </tr>
+
+                                        <tr>
+                                            <th>Arquivo</th>
 
                                         </tr>
-                                    }
-                                </tbody>
-                            </table>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var item in @Model.ListRelatoArquivo)
+                                        {
+                                            <tr>
+                                                <td>@item.Arquivo</td>
 
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+
+                            </div>
                         </div>
-                    </div>
+                    *@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Motivo do Cancelamento <span class="required">*</span></label>
                         <div class="col-sm-9">
