implementacao regra relato para encripitar telefone

--- a/Infraero.Relprev.WebUi/Views/Relato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Index.cshtml
@@ -35,8 +35,8 @@
                             @foreach (var item in Model.aaData)
                             {
                                 <tr>
-                                    <td>@Html.DisplayFor(modelItem => item.CodRelato)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.StsRelator)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.NumRelato)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.StatusRelato)</td>
                                     <td>@Html.DisplayFor(modelItem => item.DatOcorrencia)</td>
                                     <td>@Html.DisplayFor(modelItem => item.HorOcorrencia)</td>
                                     <td class="actions">
