--- a/Infraero.Relprev.WebUi/Views/Relato/Classificar.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Classificar.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Edit", "Relato", FormMethod.Post))
+        @using (@Html.BeginForm("Rank", "Relato", FormMethod.Post))
         {
             <section class="card">
                 <header class="card-header">
@@ -28,7 +28,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input readonly id="CodRelato" name="CodRelato" value="@Model.Relato.NumRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
+                                <input readonly id="CodRelato" name="CodRelato" value="@Model.Relato.Numrelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
                             </div>
                         </div>
                     </div>
